# Smart-Terminal

./: .gitignore  CMakeLists.txt  README.md  ask_gemini.sh  is
scripts/: llm_translate.sh  smart.sh  to_cmd.sh  utils.sh
